# DpOmnicide

./: CMakeLists.txt  cl_video_libavw.c  collision.c  csprogs.c  darkplaces-sdl-recast.vcproj  gl_rsurf.c  host.c  model_brush.h  model_shared.c  model_shared.h  render.h  snd_main.c  sound.h
darkplaces/: CMakeLists.txt  cdaudio.h  cl_parse.cpp  client.h  cmd.cpp  console.cpp  crypto.cpp  csprogs.cpp  darkplaces-dedicated.vcproj  darkplaces-sdl-dev.vcproj  darkplaces-sdl.vcproj  dpsoftrast.cpp  dpvsimpledecode.h  fs.cpp  host.cpp  host_cmd.cpp  image.cpp  keys.cpp  lhnet.cpp  libcurl.cpp  menu.cpp  model_brush.cpp  mvm_cmds.cpp  netconn.cpp  progsvm.h  quakedef.h  r_shadow.cpp  render.h  sbar.cpp  sv_main.cpp  view.cpp  world.cpp  zone.cpp
darkplaces/cap/: avi.cpp  ogg.cpp
darkplaces/cd/: sdl.cpp  shared.cpp
darkplaces/cl/: collision.cpp  demo.cpp  dyntexture.cpp  input.cpp  main.cpp  parse.cpp  particles.cpp  screen.cpp  video.cpp  video.h  video_jamdecode.cpp
darkplaces/clvm/: cmds.cpp
darkplaces/gl/: backend.cpp  draw.cpp  rmain.cpp  rsurf.cpp  textures.cpp
darkplaces/mod/: skeletal_animatevertices_generic.cpp  skeletal_animatevertices_generic.h  skeletal_animatevertices_sse.cpp  skeletal_animatevertices_sse.h
darkplaces/model/: alias.cpp  alias.h  brush.cpp  shared.cpp  shared.h  sprite.cpp
darkplaces/prvm/: cmds.cpp  cmds.h  edict.cpp  exec.cpp
darkplaces/r/: explosion.cpp  lightning.cpp  modules.cpp  shadow.cpp  sky.cpp  sprites.cpp
darkplaces/snd/: main.cpp  mem.cpp  mix.cpp  modplug.cpp  ogg.cpp  sdl.cpp  wav.cpp
darkplaces/sv/: demo.cpp  main.cpp  move.cpp  phys.cpp  user.cpp
darkplaces/svvm/: cmds.cpp
darkplaces/sys/: sdl.cpp  shared.cpp
darkplaces/thread/: sdl.cpp
darkplaces/vid/: sdl.cpp  shared.cpp
